--- a/.github/workflows/Szenario A.yml
+++ b/.github/workflows/Szenario A.yml
@@ -14,7 +14,7 @@ jobs:
   # Gitleaks - Secrets
   # -------------------
   gitleaks:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
         uses: actions/checkout@v5
