--- a/.github/workflows/Szenario C.yml
+++ b/.github/workflows/Szenario C.yml
@@ -14,7 +14,7 @@ jobs:
   # SAST - Bandit + Semgrep
   # -------------------
   sast:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
         uses: actions/checkout@v5
