--- a/.github/workflows/Szenario D.yml
+++ b/.github/workflows/Szenario D.yml
@@ -19,7 +19,7 @@ jobs:
   # SAST - Bandit + Semgrep
   # -------------------
   sast:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     if: github.event_name == 'push' || github.event_name == 'pull_request'
     steps:
       - name: Checkout repo
