--- a/.github/workflows/Szenario D.yml
+++ b/.github/workflows/Szenario D.yml
@@ -62,7 +62,7 @@ jobs:
   # SCA - Trivy FS (Nightly)
   # -------------------
   sca:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     if: github.event_name == 'schedule'
     steps:
       - name: Checkout repo
@@ -92,7 +92,7 @@ jobs:
   # Secrets - Gitleaks
   # -------------------
   secrets:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     if: github.event_name == 'push' || github.event_name == 'pull_request'
     steps:
       - name: Checkout repo
@@ -123,7 +123,7 @@ jobs:
   # DAST - ZAP Baseline Scan (nur Main/Release)
   # -------------------
   zap:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/heads/release/')
     steps:
       - name: Checkout repo
