--- a/.github/workflows/Szenario A.yml
+++ b/.github/workflows/Szenario A.yml
@@ -44,7 +44,7 @@ jobs:
   # Semgrep - SAST
   # -------------------
   semgrep:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
         uses: actions/checkout@v5
@@ -75,7 +75,7 @@ jobs:
   # Trivy FS Scan - SCA
   # -------------------
   trivy:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
         uses: actions/checkout@v5
@@ -105,7 +105,7 @@ jobs:
   # ZAP - DAST
   # -------------------
   zap:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
         uses: actions/checkout@v5
