--- a/.github/workflows/Szenario A.yml
+++ b/.github/workflows/Szenario A.yml
@@ -8,6 +8,9 @@ on:
 permissions:
   contents: read
 
+# -------------------
+# Szenario A: Alles parallel
+# -------------------
 jobs:
 
   # -------------------
@@ -16,8 +19,7 @@ jobs:
   gitleaks:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v5
+      - uses: actions/checkout@v5
 
       - name: Prepare directories
         run: mkdir -p results/raw
@@ -25,7 +27,6 @@ jobs:
       - name: Run Gitleaks
         run: |
           docker run --rm \
-            --cpus="1" --memory="2g" \
             -v "$PWD:/src" \
             zricethezav/gitleaks detect \
               --source=/src \
@@ -33,8 +34,7 @@ jobs:
               --report-path /src/results/raw/gitleaks.json \
               --no-git || true
 
-      - name: Upload Gitleaks report
-        uses: actions/upload-artifact@v4
+      - uses: actions/upload-artifact@v4
         with:
           name: gitleaks-report
           path: results/raw/gitleaks.json
@@ -46,8 +46,7 @@ jobs:
   semgrep:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v5
+      - uses: actions/checkout@v5
 
       - name: Prepare directories
         run: mkdir -p results/raw
@@ -55,7 +54,6 @@ jobs:
       - name: Run Semgrep
         run: |
           docker run --rm \
-            --cpus="2" --memory="4g" \
             -v "$PWD:/src" \
             returntocorp/semgrep:1.75.0 \
             semgrep scan \
@@ -64,8 +62,7 @@ jobs:
               --output=/src/results/raw/semgrep.json \
               --metrics=off || true
 
-      - name: Upload Semgrep report
-        uses: actions/upload-artifact@v4
+      - uses: actions/upload-artifact@v4
         with:
           name: semgrep-report
           path: results/raw/semgrep.json
@@ -77,8 +74,7 @@ jobs:
   trivy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v5
+      - uses: actions/checkout@v5
 
       - name: Prepare directories
         run: mkdir -p results/raw
@@ -86,7 +82,6 @@ jobs:
       - name: Run Trivy FS Scan
         run: |
           docker run --rm \
-            --cpus="2" --memory="4g" \
             -v "$PWD:/src" \
             aquasec/trivy:0.49.1 \
             fs /src \
@@ -94,60 +89,67 @@ jobs:
               --format json \
               --output /src/results/raw/trivy-fs.json || true
 
-      - name: Upload Trivy report
-        uses: actions/upload-artifact@v4
+      - uses: actions/upload-artifact@v4
         with:
           name: trivy-report
           path: results/raw/trivy-fs.json
           if-no-files-found: warn
 
   # -------------------
-  # ZAP - DAST
+  # ZAP - DAST (Flask App lokal)
   # -------------------
   zap:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v5
+      - uses: actions/checkout@v5
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+
+      - name: Install Flask App dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
       - name: Start Vulnerable Flask App
         run: |
-          docker rm -f vfa || true
-          docker run -d --name vfa -p 5000:5000 videvelopers/vulnerable-flask-app
+          nohup python app.py > flask.log 2>&1 &
+          sleep 5
 
       - name: Wait for Flask App
         run: |
-          for i in {1..30}; do
+          for i in {1..20}; do
             if curl -s http://localhost:5000 > /dev/null; then
               echo "Flask App ready for DAST"
               exit 0
             fi
-            sleep 5
+            sleep 3
           done
-          echo "Flask App did not start in time"
+          echo "Flask App did not start"
+          cat flask.log
           exit 1
 
       - name: ZAP Baseline Scan
         uses: zaproxy/action-baseline@v0.15.0
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          docker_name: ghcr.io/zaproxy/zaproxy:stable
           target: http://localhost:5000
           cmd_options: "-a"
           fail_action: false
           artifact_name: zap_baseline_scan
 
-      - name: Cleanup Flask App
-        run: docker rm -f vfa || true
-
   # -------------------
-  # Bandit - Python SAST / IAST-light
+  # Bandit - Python SAST
   # -------------------
   bandit:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v5
+      - uses: actions/checkout@v5
+
+      - name: Prepare directories
+        run: mkdir -p results/raw
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -157,12 +159,10 @@ jobs:
       - name: Install Bandit
         run: pip install bandit
 
-      - name: Run Bandit (recursive scan)
-        run: |
-          bandit -r . -f json -o results/raw/bandit.json || true
+      - name: Run Bandit
+        run: bandit -r . -f json -o results/raw/bandit.json || true
 
-      - name: Upload Bandit report
-        uses: actions/upload-artifact@v4
+      - uses: actions/upload-artifact@v4
         with:
           name: bandit-report
           path: results/raw/bandit.json
