--- a/.github/workflows/Szenario A.yml
+++ b/.github/workflows/Szenario A.yml
@@ -1,4 +1,4 @@
-name: scenario-a-parallel-flask
+name: Szenario A
 
 on:
   workflow_dispatch:
@@ -8,13 +8,13 @@ on:
 permissions:
   contents: read
 
-# -------------------
-# Szenario A: Alles parallel
-# -------------------
+# -----------------------------------
+# Szenario A – Alles parallel
+# -----------------------------------
 jobs:
 
   # -------------------
-  # Gitleaks - Secrets
+  # Gitleaks – Secrets
   # -------------------
   gitleaks:
     runs-on: ubuntu-latest
@@ -41,7 +41,7 @@ jobs:
           if-no-files-found: warn
 
   # -------------------
-  # Semgrep - SAST
+  # Semgrep – SAST
   # -------------------
   semgrep:
     runs-on: ubuntu-latest
@@ -69,7 +69,7 @@ jobs:
           if-no-files-found: warn
 
   # -------------------
-  # Trivy FS Scan - SCA
+  # Trivy – SCA (FS)
   # -------------------
   trivy:
     runs-on: ubuntu-latest
@@ -79,7 +79,7 @@ jobs:
       - name: Prepare directories
         run: mkdir -p results/raw
 
-      - name: Run Trivy FS Scan
+      - name: Run Trivy FS scan
         run: |
           docker run --rm \
             -v "$PWD:/src" \
@@ -96,7 +96,7 @@ jobs:
           if-no-files-found: warn
 
   # -------------------
-  # ZAP - DAST (Flask App lokal)
+  # ZAP – DAST
   # -------------------
   zap:
     runs-on: ubuntu-latest
@@ -108,14 +108,14 @@ jobs:
         with:
           python-version: "3.11"
 
-      - name: Install Flask App dependencies
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
       - name: Start Vulnerable Flask App
         run: |
-          nohup python app.py > flask.log 2>&1 &
+          nohup python vulnerable-flask-app-linux.py > flask.log 2>&1 &
           sleep 5
 
       - name: Wait for Flask App
@@ -134,22 +134,27 @@ jobs:
       - name: ZAP Baseline Scan
         uses: zaproxy/action-baseline@v0.15.0
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
           target: http://localhost:5000
+          docker_name: ghcr.io/zaproxy/zaproxy:stable
           cmd_options: "-a"
           fail_action: false
-          artifact_name: zap_baseline_scan
+          artifact_name: zap-baseline-report
+
+      - name: Upload Flask logs
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: flask-runtime-log
+          path: flask.log
+          if-no-files-found: warn
 
   # -------------------
-  # Bandit - Python SAST
+  # Bandit – Python SAST / IAST-light
   # -------------------
   bandit:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
-
-      - name: Prepare directories
-        run: mkdir -p results/raw
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -159,8 +164,12 @@ jobs:
       - name: Install Bandit
         run: pip install bandit
 
+      - name: Prepare directories
+        run: mkdir -p results/raw
+
       - name: Run Bandit
-        run: bandit -r . -f json -o results/raw/bandit.json || true
+        run: |
+          bandit -r . -f json -o results/raw/bandit.json || true
 
       - uses: actions/upload-artifact@v4
         with:
