--- a/.github/workflows/Szenario A.yml
+++ b/.github/workflows/Szenario A.yml
@@ -1,4 +1,4 @@
-name: Szenario A
+name: scenario-a-parallel-flask
 
 on:
   workflow_dispatch:
@@ -8,9 +8,6 @@ on:
 permissions:
   contents: read
 
-# -----------------------------------
-# Szenario A – Alles parallel
-# -----------------------------------
 jobs:
 
   # -------------------
@@ -121,7 +118,7 @@ jobs:
       - name: Wait for Flask App
         run: |
           for i in {1..20}; do
-            if curl -s http://localhost:5000 > /dev/null; then
+            if curl -s http://localhost:8081 > /dev/null; then
               echo "Flask App ready for DAST"
               exit 0
             fi
@@ -134,7 +131,7 @@ jobs:
       - name: ZAP Baseline Scan
         uses: zaproxy/action-baseline@v0.15.0
         with:
-          target: http://localhost:5000
+          target: http://localhost:8081
           docker_name: ghcr.io/zaproxy/zaproxy:stable
           cmd_options: "-a"
           fail_action: false
