--- a/.github/workflows/Szenario B.yml
+++ b/.github/workflows/Szenario B.yml
@@ -7,90 +7,17 @@ on:
 
 permissions:
   contents: read
+  issues: write
 
 jobs:
 
   # -------------------
-  # SAST - Bandit + Semgrep
+  # 1. Gitleaks – Secrets
   # -------------------
-  sast:
+  gitleaks:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v5
-
-      - name: Prepare directories
-        run: mkdir -p results/raw
-
-      # --- Bandit (Python SAST) ---
-      - name: Install Python & Bandit
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.11"
-
-      - name: Run Bandit
-        run: |
-          pip install bandit
-          bandit -r . -f json -o results/raw/bandit.json || true
-
-      # --- Semgrep (SAST) ---
-      - name: Run Semgrep
-        run: |
-          docker run --rm \
-            --cpus="2" --memory="4g" \
-            -v "$PWD:/src" \
-            returntocorp/semgrep:1.75.0 \
-            semgrep scan --config=p/ci \
-              --json \
-              --output=/src/results/raw/semgrep.json \
-              --metrics=off || true
-
-      - name: Upload SAST reports
-        uses: actions/upload-artifact@v4
-        with:
-          name: sast-reports
-          path: results/raw
-          if-no-files-found: warn
-
-  # -------------------
-  # SCA - Trivy FS
-  # -------------------
-  sca:
-    runs-on: ubuntu-latest
-    needs: sast
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@v5
-
-      - name: Prepare directories
-        run: mkdir -p results/raw
-
-      - name: Run Trivy FS Scan
-        run: |
-          docker run --rm \
-            --cpus="2" --memory="4g" \
-            -v "$PWD:/src" \
-            aquasec/trivy:0.49.1 \
-            fs /src --scanners vuln,misconfig \
-              --format json \
-              --output /src/results/raw/trivy-fs.json || true
-
-      - name: Upload SCA report
-        uses: actions/upload-artifact@v4
-        with:
-          name: sca-report
-          path: results/raw/trivy-fs.json
-          if-no-files-found: warn
-
-  # -------------------
-  # Secrets - Gitleaks
-  # -------------------
-  secrets:
-    runs-on: ubuntu-latest
-    needs: sca
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@v5
+      - uses: actions/checkout@v5
 
       - name: Prepare directories
         run: mkdir -p results/raw
@@ -98,7 +25,6 @@ jobs:
       - name: Run Gitleaks
         run: |
           docker run --rm \
-            --cpus="1" --memory="2g" \
             -v "$PWD:/src" \
             zricethezav/gitleaks detect \
               --source=/src \
@@ -106,80 +32,156 @@ jobs:
               --report-path /src/results/raw/gitleaks.json \
               --no-git || true
 
-      - name: Upload Gitleaks report
-        uses: actions/upload-artifact@v4
+      - uses: actions/upload-artifact@v4
         with:
           name: gitleaks-report
           path: results/raw/gitleaks.json
           if-no-files-found: warn
 
+
   # -------------------
-  # DAST - ZAP Baseline Scan
+  # 2. Semgrep – SAST
   # -------------------
-  dast:
+  semgrep:
     runs-on: ubuntu-latest
-    needs: secrets
+    needs: gitleaks
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v5
+      - uses: actions/checkout@v5
+
+      - name: Prepare directories
+        run: mkdir -p results/raw
+
+      - name: Run Semgrep
+        run: |
+          docker run --rm \
+            -v "$PWD:/src" \
+            returntocorp/semgrep:1.75.0 \
+            semgrep scan \
+              --config=p/ci \
+              --json \
+              --output=/src/results/raw/semgrep.json \
+              --metrics=off || true
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: semgrep-report
+          path: results/raw/semgrep.json
+          if-no-files-found: warn
+
+
+  # -------------------
+  # 3. Bandit – Python SAST / IAST-light
+  # -------------------
+  bandit:
+    runs-on: ubuntu-latest
+    needs: semgrep
+    steps:
+      - uses: actions/checkout@v5
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+
+      - name: Install Bandit
+        run: pip install bandit
+
+      - name: Prepare directories
+        run: mkdir -p results/raw
+
+      - name: Run Bandit
+        run: |
+          bandit -r . -f json -o results/raw/bandit.json || true
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: bandit-report
+          path: results/raw/bandit.json
+          if-no-files-found: warn
+
+
+  # -------------------
+  # 4. Trivy – SCA (FS)
+  # -------------------
+  trivy:
+    runs-on: ubuntu-latest
+    needs: bandit
+    steps:
+      - uses: actions/checkout@v5
+
+      - name: Prepare directories
+        run: mkdir -p results/raw
+
+      - name: Run Trivy FS scan
+        run: |
+          docker run --rm \
+            -v "$PWD:/src" \
+            aquasec/trivy:0.49.1 \
+            fs /src \
+              --scanners vuln,misconfig \
+              --format json \
+              --output /src/results/raw/trivy-fs.json || true
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: trivy-report
+          path: results/raw/trivy-fs.json
+          if-no-files-found: warn
+
+
+  # -------------------
+  # 5. ZAP – DAST (last)
+  # -------------------
+  zap:
+    runs-on: ubuntu-latest
+    needs: trivy
+    steps:
+      - uses: actions/checkout@v5
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
       - name: Start Vulnerable Flask App
         run: |
-          docker rm -f vfa || true
-          docker run -d --name vfa -p 5000:5000 videvelopers/vulnerable-flask-app
+          nohup python vulnerable-flask-app-linux.py > flask.log 2>&1 &
+          sleep 5
 
       - name: Wait for Flask App
         run: |
-          for i in {1..30}; do
-            if curl -s http://localhost:5000 > /dev/null; then
+          for i in {1..20}; do
+            if curl -s http://localhost:8081 > /dev/null; then
               echo "Flask App ready for DAST"
               exit 0
             fi
-            sleep 5
+            sleep 3
           done
-          echo "Flask App did not start in time"
+          echo "Flask App did not start"
+          cat flask.log
           exit 1
 
       - name: ZAP Baseline Scan
         uses: zaproxy/action-baseline@v0.15.0
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          target: http://localhost:8081
           docker_name: ghcr.io/zaproxy/zaproxy:stable
-          target: http://localhost:5000
           cmd_options: "-a"
           fail_action: false
-          artifact_name: zap_baseline_scan
+          artifact_name: zap-baseline-report
+          token: ${{ secrets.ZAP_GITHUB_TOKEN }}
+          allow_issue_writing: true
+          issue_title: "ZAP Scan Baseline Report"
 
-      - name: Cleanup Flask App
-        run: docker rm -f vfa || true
-
-  # -------------------
-  # IAST (optional) - Bandit / Python runtime
-  # -------------------
-  iast:
-    runs-on: ubuntu-latest
-    needs: dast
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@v5
-
-      - name: Prepare directories
-        run: mkdir -p results/raw
-
-      - name: Set up Python & Bandit for IAST
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.11"
-
-      - name: Run Bandit as IAST-Light
-        run: |
-          pip install bandit
-          # Hier kann man Unit-Tests oder Integration-Tests einbinden, um IAST zu simulieren
-          bandit -r . -f json -o results/raw/bandit-iast.json || true
-
-      - name: Upload IAST report
+      - name: Upload Flask logs
+        if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: bandit-iast-report
-          path: results/raw/bandit-iast.json
+          name: flask-runtime-log
+          path: flask.log
           if-no-files-found: warn
