--- a/.github/workflows/Szenario C.yml
+++ b/.github/workflows/Szenario C.yml
@@ -10,20 +10,23 @@ permissions:
 
 jobs:
 
-  # -------------------
-  # SAST - Bandit + Semgrep
-  # -------------------
+  # =====================================================
+  # SAST – Bandit + Semgrep (FAIL-FAST ENTRY POINT)
+  # =====================================================
   sast:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v5
 
       - name: Prepare directories
         run: mkdir -p results/raw
 
-      # --- Bandit ---
-      - name: Install Python & Bandit
+      # -------------------
+      # Bandit (Python SAST)
+      # -------------------
+      - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
@@ -31,26 +34,39 @@ jobs:
       - name: Run Bandit
         run: |
           pip install bandit
-          bandit -r . -f json -o results/raw/bandit.json || exit 1
+          bandit -r . -f json -o results/raw/bandit.json || true
 
-      # --- Semgrep ---
+      - name: Fail-Fast check – Bandit HIGH findings
+        run: |
+          HIGH_COUNT=$(jq '[.results[] | select(.issue_severity=="HIGH")] | length' results/raw/bandit.json)
+          echo "Bandit HIGH findings: $HIGH_COUNT"
+
+          if [ "$HIGH_COUNT" -gt 0 ]; then
+            echo "❌ Fail-Fast: HIGH severity issues detected by Bandit"
+            exit 1
+          fi
+
+      # -------------------
+      # Semgrep (SAST)
+      # -------------------
       - name: Run Semgrep
         run: |
           docker run --rm \
-            --cpus="2" --memory="4g" \
             -v "$PWD:/src" \
             returntocorp/semgrep:1.75.0 \
-            semgrep scan --config=p/ci \
+            semgrep scan \
+              --config=p/ci \
               --json \
               --output=/src/results/raw/semgrep.json \
-              --metrics=off || exit 1
+              --metrics=off || true
 
-      - name: Check for critical SAST findings
+      - name: Fail-Fast check – Semgrep ERROR severity
         run: |
-          CRITICAL_COUNT=$(jq '.results | map(select(.severity=="critical")) | length' results/raw/semgrep.json)
-          echo "Critical findings: $CRITICAL_COUNT"
-          if [ "$CRITICAL_COUNT" -gt 0 ]; then
-            echo "Critical SAST findings found, aborting workflow."
+          ERROR_COUNT=$(jq '[.results[] | select(.extra.severity=="ERROR")] | length' results/raw/semgrep.json)
+          echo "Semgrep ERROR findings: $ERROR_COUNT"
+
+          if [ "$ERROR_COUNT" -gt 0 ]; then
+            echo "❌ Fail-Fast: Critical Semgrep findings detected"
             exit 1
           fi
 
@@ -61,142 +77,134 @@ jobs:
           path: results/raw
           if-no-files-found: warn
 
-  # -------------------
-  # SCA - Trivy FS
-  # -------------------
+  # =====================================================
+  # SCA – Trivy FS (only if SAST passed)
+  # =====================================================
   sca:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     needs: sast
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@v5
 
-      - name: Run Trivy FS Scan
+    steps:
+      - uses: actions/checkout@v5
+
+      - name: Prepare directories
+        run: mkdir -p results/raw
+
+      - name: Run Trivy FS scan
         run: |
           docker run --rm \
-            --cpus="2" --memory="4g" \
             -v "$PWD:/src" \
             aquasec/trivy:0.49.1 \
-            fs /src --scanners vuln,misconfig \
+            fs /src \
+              --scanners vuln,misconfig \
               --format json \
-              --output /src/results/raw/trivy-fs.json || exit 1
+              --output /src/results/raw/trivy-fs.json || true
 
-      - name: Check for critical SCA findings
+      - name: Fail-Fast check – Trivy CRITICAL findings
         run: |
-          CRITICAL_COUNT=$(jq '.Results | map(select(.Severity=="CRITICAL")) | length' results/raw/trivy-fs.json)
-          echo "Critical findings: $CRITICAL_COUNT"
+          CRITICAL_COUNT=$(jq '[.Results[].Vulnerabilities[]? | select(.Severity=="CRITICAL")] | length' results/raw/trivy-fs.json)
+          echo "Trivy CRITICAL findings: $CRITICAL_COUNT"
+
           if [ "$CRITICAL_COUNT" -gt 0 ]; then
-            echo "Critical SCA findings found, aborting workflow."
+            echo "❌ Fail-Fast: CRITICAL vulnerabilities detected by Trivy"
             exit 1
           fi
 
-      - name: Upload SCA report
-        uses: actions/upload-artifact@v4
+      - uses: actions/upload-artifact@v4
         with:
-          name: sca-report
+          name: trivy-report
           path: results/raw/trivy-fs.json
           if-no-files-found: warn
 
-  # -------------------
-  # Secrets - Gitleaks
-  # -------------------
+  # =====================================================
+  # Secrets – Gitleaks (only if SCA passed)
+  # =====================================================
   secrets:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     needs: sca
+
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v5
+      - uses: actions/checkout@v5
+
+      - name: Prepare directories
+        run: mkdir -p results/raw
 
       - name: Run Gitleaks
         run: |
           docker run --rm \
-            --cpus="1" --memory="2g" \
             -v "$PWD:/src" \
             zricethezav/gitleaks detect \
               --source=/src \
               --report-format json \
               --report-path /src/results/raw/gitleaks.json \
-              --no-git || exit 1
+              --no-git || true
 
-      - name: Check for critical Secrets findings
+      - name: Fail-Fast check – Secrets detected
         run: |
-          CRITICAL_COUNT=$(jq '.Leaks | length' results/raw/gitleaks.json)
-          echo "Critical secrets leaks: $CRITICAL_COUNT"
-          if [ "$CRITICAL_COUNT" -gt 0 ]; then
-            echo "Critical secrets leaks found, aborting workflow."
+          COUNT=$(jq 'length' results/raw/gitleaks.json)
+          echo "Secrets found: $COUNT"
+
+          if [ "$COUNT" -gt 0 ]; then
+            echo "❌ Fail-Fast: Secrets detected"
             exit 1
           fi
 
-      - name: Upload Gitleaks report
-        uses: actions/upload-artifact@v4
+      - uses: actions/upload-artifact@v4
         with:
           name: gitleaks-report
           path: results/raw/gitleaks.json
           if-no-files-found: warn
 
-  # -------------------
-  # DAST - ZAP Baseline Scan
-  # -------------------
+  # =====================================================
+  # DAST – ZAP (only if everything passed)
+  # =====================================================
   dast:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     needs: secrets
+
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v5
+      - uses: actions/checkout@v5
 
-      - name: Start Vulnerable Flask App
-        run: |
-          docker rm -f vfa || true
-          docker run -d --name vfa -p 5000:5000 videvelopers/vulnerable-flask-app
-
-      - name: Wait for Flask App
-        run: |
-          for i in {1..30}; do
-            if curl -s http://localhost:5000 > /dev/null; then
-              echo "Flask App ready for DAST"
-              exit 0
-            fi
-            sleep 5
-          done
-          echo "Flask App did not start in time"
-          exit 1
-
-      - name: Run ZAP Baseline Scan
-        uses: zaproxy/action-baseline@v0.15.0
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          docker_name: ghcr.io/zaproxy/zaproxy:stable
-          target: http://localhost:5000
-          cmd_options: "-a"
-          fail_action: true
-          artifact_name: zap_baseline_scan
-
-      - name: Cleanup Flask App
-        run: docker rm -f vfa || true
-
-  # -------------------
-  # Optional IAST - Bandit + Integration Tests
-  # -------------------
-  iast:
-    runs-on: self-hosted
-    needs: dast
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@v5
-
-      - name: Set up Python & Bandit for IAST
+      - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      - name: Run Bandit as IAST-Light
+      - name: Install dependencies
         run: |
-          pip install bandit
-          bandit -r . -f json -o results/raw/bandit-iast.json || exit 1
+          pip install -r requirements.txt
 
-      - name: Upload IAST report
+      - name: Start Vulnerable Flask App
+        run: |
+          nohup python vulnerable-flask-app-linux.py > flask.log 2>&1 &
+          sleep 5
+
+      - name: Wait for Flask App
+        run: |
+          for i in {1..20}; do
+            if curl -s http://localhost:8081 > /dev/null; then
+              echo "Flask App ready"
+              exit 0
+            fi
+            sleep 3
+          done
+          echo "Flask App did not start"
+          cat flask.log
+          exit 1
+
+      - name: ZAP Baseline Scan
+        uses: zaproxy/action-baseline@v0.15.0
+        with:
+          target: http://localhost:8081
+          docker_name: ghcr.io/zaproxy/zaproxy:stable
+          cmd_options: "-a"
+          fail_action: true
+          artifact_name: zap-baseline-report
+
+      - name: Upload Flask logs
+        if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: bandit-iast-report
-          path: results/raw/bandit-iast.json
+          name: flask-runtime-log
+          path: flask.log
           if-no-files-found: warn
