--- a/.github/workflows/Szenario C.yml
+++ b/.github/workflows/Szenario C.yml
@@ -7,48 +7,61 @@ on:
 
 permissions:
   contents: read
+  issues: write
 
 jobs:
 
-  # =====================================================
-  # SAST – Bandit + Semgrep (FAIL-FAST ENTRY POINT)
-  # =====================================================
-  sast:
+  # ===================
+  # 1. SAST – Bandit
+  # ===================
+  bandit:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v5
+      - uses: actions/checkout@v5
 
-      - name: Prepare directories
-        run: mkdir -p results/raw
-
-      # -------------------
-      # Bandit (Python SAST)
-      # -------------------
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
+
+      - name: Prepare directories
+        run: mkdir -p results/raw
 
       - name: Run Bandit
         run: |
           pip install bandit
           bandit -r . -f json -o results/raw/bandit.json || true
 
-      - name: Fail-Fast check – Bandit HIGH findings
+      - name: Upload Bandit report
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: bandit-report
+          path: results/raw/bandit.json
+          if-no-files-found: warn
+
+      - name: Fail-Fast – Bandit HIGH findings
         run: |
           HIGH_COUNT=$(jq '[.results[] | select(.issue_severity=="HIGH")] | length' results/raw/bandit.json)
           echo "Bandit HIGH findings: $HIGH_COUNT"
 
           if [ "$HIGH_COUNT" -gt 0 ]; then
-            echo "❌ Fail-Fast: HIGH severity issues detected by Bandit"
+            echo "❌ Fail-Fast: Bandit HIGH severity issues detected"
             exit 1
           fi
 
-      # -------------------
-      # Semgrep (SAST)
-      # -------------------
+  # ===================
+  # 2. SAST – Semgrep
+  # ===================
+  semgrep:
+    runs-on: ubuntu-latest
+    needs: bandit
+    steps:
+      - uses: actions/checkout@v5
+
+      - name: Prepare directories
+        run: mkdir -p results/raw
+
       - name: Run Semgrep
         run: |
           docker run --rm \
@@ -60,30 +73,30 @@ jobs:
               --output=/src/results/raw/semgrep.json \
               --metrics=off || true
 
-      - name: Fail-Fast check – Semgrep ERROR severity
-        run: |
-          ERROR_COUNT=$(jq '[.results[] | select(.extra.severity=="ERROR")] | length' results/raw/semgrep.json)
-          echo "Semgrep ERROR findings: $ERROR_COUNT"
+      - name: Upload Semgrep report
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: semgrep-report
+          path: results/raw/semgrep.json
+          if-no-files-found: warn
 
-          if [ "$ERROR_COUNT" -gt 0 ]; then
-            echo "❌ Fail-Fast: Critical Semgrep findings detected"
+      - name: Fail-Fast – Semgrep CRITICAL findings
+        run: |
+          CRITICAL_COUNT=$(jq '[.results[] | select(.extra.severity=="CRITICAL")] | length' results/raw/semgrep.json)
+          echo "Semgrep CRITICAL findings: $CRITICAL_COUNT"
+
+          if [ "$CRITICAL_COUNT" -gt 0 ]; then
+            echo "❌ Fail-Fast: Semgrep CRITICAL findings detected"
             exit 1
           fi
 
-      - name: Upload SAST reports
-        uses: actions/upload-artifact@v4
-        with:
-          name: sast-reports
-          path: results/raw
-          if-no-files-found: warn
-
-  # =====================================================
-  # SCA – Trivy FS (only if SAST passed)
-  # =====================================================
-  sca:
+  # ===================
+  # 3. SCA – Trivy FS
+  # ===================
+  trivy:
     runs-on: ubuntu-latest
-    needs: sast
-
+    needs: semgrep
     steps:
       - uses: actions/checkout@v5
 
@@ -97,32 +110,34 @@ jobs:
             aquasec/trivy:0.49.1 \
             fs /src \
               --scanners vuln,misconfig \
+              --severity CRITICAL,HIGH \
               --format json \
               --output /src/results/raw/trivy-fs.json || true
 
-      - name: Fail-Fast check – Trivy CRITICAL findings
-        run: |
-          CRITICAL_COUNT=$(jq '[.Results[].Vulnerabilities[]? | select(.Severity=="CRITICAL")] | length' results/raw/trivy-fs.json)
-          echo "Trivy CRITICAL findings: $CRITICAL_COUNT"
-
-          if [ "$CRITICAL_COUNT" -gt 0 ]; then
-            echo "❌ Fail-Fast: CRITICAL vulnerabilities detected by Trivy"
-            exit 1
-          fi
-
-      - uses: actions/upload-artifact@v4
+      - name: Upload Trivy report
+        if: always()
+        uses: actions/upload-artifact@v4
         with:
           name: trivy-report
           path: results/raw/trivy-fs.json
           if-no-files-found: warn
 
-  # =====================================================
-  # Secrets – Gitleaks (only if SCA passed)
-  # =====================================================
-  secrets:
-    runs-on: ubuntu-latest
-    needs: sca
+      - name: Fail-Fast – Trivy CRITICAL vulnerabilities
+        run: |
+          CRITICAL_COUNT=$(jq '[.Results[].Vulnerabilities[]? | select(.Severity=="CRITICAL")] | length' results/raw/trivy-fs.json)
+          echo "Trivy CRITICAL findings: $CRITICAL_COUNT"
 
+          if [ "$CRITICAL_COUNT" -gt 0 ]; then
+            echo "❌ Fail-Fast: Trivy CRITICAL vulnerabilities detected"
+            exit 1
+          fi
+
+  # ===================
+  # 4. Secrets – Gitleaks
+  # ===================
+  gitleaks:
+    runs-on: ubuntu-latest
+    needs: trivy
     steps:
       - uses: actions/checkout@v5
 
@@ -139,29 +154,30 @@ jobs:
               --report-path /src/results/raw/gitleaks.json \
               --no-git || true
 
-      - name: Fail-Fast check – Secrets detected
+      - name: Upload Gitleaks report
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: gitleaks-report
+          path: results/raw/gitleaks.json
+          if-no-files-found: warn
+
+      - name: Fail-Fast – Secrets detected
         run: |
           COUNT=$(jq 'length' results/raw/gitleaks.json)
-          echo "Secrets found: $COUNT"
+          echo "Gitleaks findings: $COUNT"
 
           if [ "$COUNT" -gt 0 ]; then
             echo "❌ Fail-Fast: Secrets detected"
             exit 1
           fi
 
-      - uses: actions/upload-artifact@v4
-        with:
-          name: gitleaks-report
-          path: results/raw/gitleaks.json
-          if-no-files-found: warn
-
-  # =====================================================
-  # DAST – ZAP (only if everything passed)
-  # =====================================================
-  dast:
+  # ===================
+  # 5. DAST – ZAP Baseline
+  # ===================
+  zap:
     runs-on: ubuntu-latest
-    needs: secrets
-
+    needs: gitleaks
     steps:
       - uses: actions/checkout@v5
 
@@ -183,7 +199,6 @@ jobs:
         run: |
           for i in {1..20}; do
             if curl -s http://localhost:8081 > /dev/null; then
-              echo "Flask App ready"
               exit 0
             fi
             sleep 3
@@ -200,6 +215,9 @@ jobs:
           cmd_options: "-a"
           fail_action: true
           artifact_name: zap-baseline-report
+          token: ${{ secrets.ZAP_GITHUB_TOKEN }}
+          allow_issue_writing: true
+          issue_title: "ZAP Fail-Fast Baseline Report"
 
       - name: Upload Flask logs
         if: always()
@@ -207,4 +225,3 @@ jobs:
         with:
           name: flask-runtime-log
           path: flask.log
-          if-no-files-found: warn
