--- a/.github/workflows/fullzap.yml
+++ b/.github/workflows/fullzap.yml
@@ -3,7 +3,6 @@ name: fullzap
 on:
   workflow_dispatch:
   push:
-  pull_request:
 
 permissions:
   contents: read
@@ -42,5 +41,10 @@ jobs:
           target: http://localhost:8081
           docker_name: ghcr.io/zaproxy/zaproxy:stable
           fail_action: false
-          artifact_name: zapfullflask
-          token: ${{ secrets.ZAP_GITHUB_TOKEN }}
+
+      - name: Upload Flask Log
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: flask-log
+          path: flask.log
